# opengl_experiments

./: .gitignore  CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
glfw-3.3.8/: cmake_uninstall.cmake
glfw-3.3.8/examples/: boing  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
glfw-3.3.8/tests/: clipboard  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  triangle-vulkan  windows
shaders/: main.frag  main.vert
src/: main.cpp
